tests/machine/x/ex/go_auto.error
line 4
** (SyntaxError) invalid syntax found on /workspace/mochi/tests/machine/x/ex/go_auto.exs:4:25:
    error: unexpected ( after alias Add. Function names and identifiers in Elixir start with lowercase characters or underscore. For example:

        hello_world()
        _starting_with_underscore()
        numb3rs_are_allowed()
        may_finish_with_question_mark?()
        may_finish_with_exclamation_mark!()

    Unexpected token: (
    │
  4 │ 		IO.inspect(testpkg.Add(2, 3))
    │                         ^
    │
    └─ /workspace/mochi/tests/machine/x/ex/go_auto.exs:4:25
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2

defmodule Main do
	def main do
		IO.inspect(testpkg.Add(2, 3))
		IO.inspect(testpkg.Pi)
		IO.inspect(testpkg.Answer)
