tests/machine/x/ex/go_auto.exs
# Generated by Mochi Elixir compiler
defmodule Main do
	def main do
		IO.inspect(testpkg.Add(2, 3))
		IO.inspect(testpkg.Pi)
		IO.inspect(testpkg.Answer)
	end
	end
Main.main()
